alignwide fixattu

--- a/sass/block.scss
+++ b/sass/block.scss
@@ -30,7 +30,7 @@ main {
     }
 
     .alignwide {
-      max-width: $wide-width;
+      max-width: min($wide-width, 100%);
       margin: 1rem auto;
       padding-left: $block-padding-width;
       padding-right: $block-padding-width;
